modules/web-server/main.tf
resource "aws_security_group" "carriyo-sg" {
    name = "carriyo-sg"
    vpc_id =  var.vpc_id
    ingress {
    description = "SSH Access from outside"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 
  ingress {
    description = "SSH Access from outside"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  ingress {
    description = "SSH Access from outside"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
    tags = {
        Name: "${var.env_prefix}-sg"
    }
  
}
data "aws_ami" "latest-amazon-linux-image"{
    most_recent = true
    owners = ["amazon"]
    filter {
        name = "name"
        values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }
    
}


/*resource "aws_key_pair" "ssh-key" {
    key_name = "carriyo-ec2-admin"
    public_key = "${file(var.public_key_location)}"
  
}*/

resource "aws_instance" "carriyo-server" {
    ami = data.aws_ami.latest-amazon-linux-image.id
    instance_type = var.instance_type

    subnet_id = var.subnet_id
    vpc_security_group_ids = [aws_security_group.carriyo-sg.id]
    availability_zone = var.avail_zone

    associate_public_ip_address = true
    key_name = "carriyo-key"

    user_data = file("entry-script.sh")

    tags ={
        Name: "${var.env_prefix}-carriyo-server"
    }
  
}
